sign in activity design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Quantam It Assignment</string>
+    <string name="register_now"><u>Register Now</u></string>
 </resources>
