--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,25 @@
 <resources>
     <string name="app_name">Quantam It Assignment</string>
     <string name="register_now"><u>Register Now</u></string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="sign_in">Sign In</string>
+    <string name="google_sign_in_button">Google Sign In Button</string>
+    <string name="or">or</string>
+    <string name="facebook_sign_in_button">Facebook Sign In Button</string>
+    <string name="login_with">Login with</string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="password_icon">Password icon</string>
+    <string name="password_hint">***********</string>
+    <string name="password">Password</string>
+    <string name="user_icon">User Icon</string>
+    <string name="email_hint">johndoe123@gmail.com</string>
+    <string name="email_id">Email Id</string>
+    <string name="account">Account</string>
+    <string name="sign_in_to_your">Sign in to your</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="sign_in">Sign In</string>
+    <string name="x">X</string>
+    <string name="social">Social</string>
 </resources>
