loading alert dialog box

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="back_to_the_city">BACK TO THE CITY</string>
     <string name="product_catalogue">Product Catalogue</string>
     <string name="up_to">Up to</string>
+    <string name="loading">Loading…</string>
     <string name="off">% off</string>
     <string name="clothing_and_shoes">CLOTHING AND SHOES</string>
     <string name="flash_deals">FLASH DEALS</string>
